2023-10-22 Aaron Lun <infinite.monkeys.with.keyboards@gmail.com>

	* inst/include/Rcpp/vector/MatrixColumn.h: Cast integer index
	to R_xlen_t to avoid integer overflow with large matrices.
	* inst/include/Rcpp/vector/MatrixRow.h: Ditto.
	* inst/include/Rcpp/vector/Vector.h: Remove stray cast to int
	that causes overflow when returning the end iterator.

2023-09-30  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-introduction.Rmd (Rcpp): Correct caption of
	third figure (cf GitHub issue #1276)
	* vignettes/pdf/Rcpp-introduction.pdf: Rebuilt

2023-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2023-08-29  Iñaki Ucar  <iucar@fedoraproject.org>

	* R/Attributes.R: Ad-hoc fix for testthat's C entrypoint in
	RcppExports.cpp

2023-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2023-08-03  Michael Chirico  <chiricom@google.com>

        * src/attributes.cpp: Directly `#include <ostream>` for `std::endl`
        * src/date.cpp: Directly `#include <R_ext/Booelan.h>` for `TRUE` and
	`FALSE`

2023-07-03  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.11

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

2023-07-02  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update usage numbers in Examples section

2023-07-01  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-dev/Dockerfile: Make 'rm' more robust as 'rm -f'
	* docker/ci-4.2/Dockerfile: Add new container for R 4.2.3
	* .github/workflows/ci.yaml (jobs): Add entry for R 4.2.3

2023-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem
